# jenkins

./: .gsvrc  .releaserc  5.txt  CHANGELOG.md  README.md  a.txt  b.txt  build.xml  c.txt  index.php  package-lock.json  package.json  package.json_  package.json_old  pyproject.toml
.circleci/: config.yml
.github/workflows/: ci.yaml  main.yml
src/: home.php  index.php  teste2.php
