[tool.poetry]
name = "sample360-core"
authors = ["dev"]
description = "sample360 core"
version = "10.0.0"

packages = [
    { include="src", from="." },
]

[tool.semantic_release]
version_variable = [
    "src/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
