[tool.poetry]
name = "test1"
version = "11.1.0"
description = ""
authors = ["lqk"]

[tool.semantic_release]
version_variable = [
    "src/__init__.py:__version__"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
version_pattern = [
    "README.md:rev: v{version}",
    "docs/CONTRIBUTING.md:tryceratops, version {version}"
]
major_on_zero = false
branch = "main"
upload_to_PyPI = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
